--- a/opencode.jsonc
+++ b/opencode.jsonc
@@ -1,6 +1,204 @@
 {
     "$schema": "https://opencode.ai/config.json",
     "theme": "catppuccin",
+    "plugin": [
+        "opencode-antigravity-auth@1.2.7",
+        // keep it the last element
+        "@tarquinen/opencode-dcp@latest",
+    ],
+    "provider": {
+        "google": {
+            "models": {
+                "antigravity-claude-sonnet-4-5": {
+                    "name": "Claude Sonnet 4.5 (Antigravity)",
+                    "limit": {
+                        "context": 200000,
+                        "output": 64000,
+                    },
+                    "modalities": {
+                        "input": [
+                            "text",
+                            "image",
+                            "pdf"
+                        ],
+                        "output": [
+                            "text"
+                        ],
+                    },
+                },
+                "antigravity-claude-sonnet-4-5-thinking-low": {
+                    "name": "Claude Sonnet 4.5 Think Low (Antigravity)",
+                    "limit": {
+                        "context": 200000,
+                        "output": 64000,
+                    },
+                    "modalities": {
+                        "input": [
+                            "text",
+                            "image",
+                            "pdf"
+                        ],
+                        "output": [
+                            "text"
+                        ],
+                    },
+                },
+                "antigravity-claude-sonnet-4-5-thinking-medium": {
+                    "name": "Claude Sonnet 4.5 Think Medium (Antigravity)",
+                    "limit": {
+                        "context": 200000,
+                        "output": 64000,
+                    },
+                    "modalities": {
+                        "input": [
+                            "text",
+                            "image",
+                            "pdf"
+                        ],
+                        "output": [
+                            "text"
+                        ],
+                    },
+                },
+                "antigravity-claude-sonnet-4-5-thinking-high": {
+                    "name": "Claude Sonnet 4.5 Think High (Antigravity)",
+                    "limit": {
+                        "context": 200000,
+                        "output": 64000,
+                    },
+                    "modalities": {
+                        "input": [
+                            "text",
+                            "image",
+                            "pdf"
+                        ],
+                        "output": [
+                            "text"
+                        ],
+                    },
+                },
+                "antigravity-claude-opus-4-5-thinking-low": {
+                    "name": "Claude Opus 4.5 Think Low (Antigravity)",
+                    "limit": {
+                        "context": 200000,
+                        "output": 64000,
+                    },
+                    "modalities": {
+                        "input": [
+                            "text",
+                            "image",
+                            "pdf"
+                        ],
+                        "output": [
+                            "text"
+                        ],
+                    },
+                },
+                "antigravity-claude-opus-4-5-thinking-medium": {
+                    "name": "Claude Opus 4.5 Think Medium (Antigravity)",
+                    "limit": {
+                        "context": 200000,
+                        "output": 64000,
+                    },
+                    "modalities": {
+                        "input": [
+                            "text",
+                            "image",
+                            "pdf"
+                        ],
+                        "output": [
+                            "text"
+                        ],
+                    },
+                },
+                "antigravity-claude-opus-4-5-thinking-high": {
+                    "name": "Claude Opus 4.5 Think High (Antigravity)",
+                    "limit": {
+                        "context": 200000,
+                        "output": 64000,
+                    },
+                    "modalities": {
+                        "input": [
+                            "text",
+                            "image",
+                            "pdf"
+                        ],
+                        "output": [
+                            "text"
+                        ],
+                    },
+                },
+                "gemini-2.5-flash": {
+                    "name": "Gemini 2.5 Flash (CLI)",
+                    "limit": {
+                        "context": 1048576,
+                        "output": 65536,
+                    },
+                    "modalities": {
+                        "input": [
+                            "text",
+                            "image",
+                            "pdf"
+                        ],
+                        "output": [
+                            "text"
+                        ],
+                    },
+                },
+                "gemini-2.5-pro": {
+                    "name": "Gemini 2.5 Pro (CLI)",
+                    "limit": {
+                        "context": 1048576,
+                        "output": 65536,
+                    },
+                    "modalities": {
+                        "input": [
+                            "text",
+                            "image",
+                            "pdf"
+                        ],
+                        "output": [
+                            "text"
+                        ],
+                    },
+                },
+                "antigravity-gemini-3-flash-preview": {
+                    "name": "Gemini 3 Flash Preview (CLI)",
+                    "limit": {
+                        "context": 1048576,
+                        "output": 65536,
+                    },
+                    "modalities": {
+                        "input": [
+                            "text",
+                            "image",
+                            "pdf"
+                        ],
+                        "output": [
+                            "text"
+                        ],
+                    },
+                },
+                "antigravity-gemini-3-pro-preview": {
+                    "name": "Gemini 3 Pro Preview (CLI)",
+                    "limit": {
+                        "context": 1048576,
+                        "output": 65535,
+                    },
+                    "modalities": {
+                        "input": [
+                            "text",
+                            "image",
+                            "pdf"
+                        ],
+                        "output": [
+                            "text"
+                        ],
+                    },
+                },
+            },
+        },
+    },
     "share": "disabled",
     "autoupdate": true,
     "permission": {
