--- a/opencode.jsonc
+++ b/opencode.jsonc
@@ -2,7 +2,7 @@
     "$schema": "https://opencode.ai/config.json",
     "theme": "catppuccin",
     "plugin": [
-        "opencode-antigravity-auth@1.2.7",
+        "opencode-antigravity-auth@1.2.8",
         // keep it the last element
         "@tarquinen/opencode-dcp@latest",
     ],
@@ -204,6 +204,20 @@
     "permission": {
         "bash": {
             "*": "ask",
+        },
+        "edit": {
+            "**/*.env*": "deny",
+            "**/*.key": "deny",
+            "**/*.secret": "deny",
+            "node_modules/**": "deny",
+            ".git/**": "deny",
+        },
+        "read": {
+            "**/*.env*": "deny",
+            "**/*.key": "deny",
+            "**/*.secret": "deny",
+            "node_modules/**": "deny",
+            ".git/**": "deny",
         },
     },
     "command": {
